@@ -1,16 +1,15 @@
 package com.querydsl.example.jpa.repository;
 
 import static com.querydsl.example.jpa.model.QTweet.tweet;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.example.jpa.model.Tweet;
 import com.querydsl.example.jpa.model.User;
+import jakarta.inject.Inject;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import javax.inject.Inject;
 import org.junit.Test;
 
 public class TweetRepositoryTest extends AbstractPersistenceTest {
@@ -20,35 +19,35 @@ public class TweetRepositoryTest extends AbstractPersistenceTest {
 
   @Test
   public void save_and_find_by_id() {
-    User poster = new User("dr_frank");
+    var poster = new User("dr_frank");
     userRepository.save(poster);
 
-    String content = "I am alive! #YOLO";
-    Tweet tweet = new Tweet(poster, content, Collections.<User>emptyList(), null);
+    var content = "I am alive! #YOLO";
+    var tweet = new Tweet(poster, content, Collections.<User>emptyList(), null);
     repository.save(tweet);
-    assertEquals(content, repository.findById(tweet.getId()).getContent());
+    assertThat(repository.findById(tweet.getId()).getContent()).isEqualTo(content);
   }
 
   @Test
   public void find_list_by_predicate() {
-    User poster = new User("dr_frank");
+    var poster = new User("dr_frank");
     userRepository.save(poster);
 
     repository.save(new Tweet(poster, "It is a alive! #YOLO", Collections.<User>emptyList(), null));
     repository.save(new Tweet(poster, "Oh the humanity!", Collections.<User>emptyList(), null));
     repository.save(new Tweet(poster, "#EpicFail", Collections.<User>emptyList(), null));
-    assertEquals(1, repository.findAll(tweet.content.contains("#YOLO")).size());
+    assertThat(repository.findAll(tweet.content.contains("#YOLO"))).hasSize(1);
   }
 
   @Test
   public void find_list_by_predicate_with_hibernate() {
-    User poster = new User("dr_frank");
+    var poster = new User("dr_frank");
     userRepository.save(poster);
 
     repository.save(new Tweet(poster, "It is a alive! #YOLO", Collections.<User>emptyList(), null));
     repository.save(new Tweet(poster, "Oh the humanity!", Collections.<User>emptyList(), null));
     repository.save(new Tweet(poster, "#EpicFail", Collections.<User>emptyList(), null));
-    assertEquals(1, repository.findAllWithHibernateQuery(tweet.content.contains("#YOLO")).size());
+    assertThat(repository.findAllWithHibernateQuery(tweet.content.contains("#YOLO"))).hasSize(1);
   }
 
   @Test
@@ -58,18 +57,18 @@ public class TweetRepositoryTest extends AbstractPersistenceTest {
     for (String username : usernames) {
       users.add(userRepository.save(new User(username)));
     }
-    User poster = new User("duplo");
+    var poster = new User("duplo");
     userRepository.save(poster);
-    for (int i = 0; i < 100; i++) {
+    for (var i = 0; i < 100; i++) {
       repository.save(new Tweet(poster, "spamming @dr_frank " + i, users.subList(0, 1), null));
     }
-    assertTrue(repository.findAll(tweet.mentions.contains(users.get(1))).isEmpty());
+    assertThat(repository.findAll(tweet.mentions.contains(users.get(1)))).isEmpty();
 
-    assertEquals(100, repository.findAll(tweet.mentions.contains(users.get(0))).size());
+    assertThat(repository.findAll(tweet.mentions.contains(users.getFirst()))).hasSize(100);
 
-    assertTrue(repository.findAll(tweet.mentions.any().username.eq("duplo")).isEmpty());
+    assertThat(repository.findAll(tweet.mentions.any().username.eq("duplo"))).isEmpty();
 
-    assertEquals(100, repository.findAll(tweet.mentions.any().username.eq("dr_frank")).size());
+    assertThat(repository.findAll(tweet.mentions.any().username.eq("dr_frank"))).hasSize(100);
   }
 
   @Test
@@ -79,22 +78,21 @@ public class TweetRepositoryTest extends AbstractPersistenceTest {
     for (String username : usernames) {
       users.add(userRepository.save(new User(username)));
     }
-    User poster = new User("duplo");
+    var poster = new User("duplo");
     userRepository.save(poster);
-    for (int i = 0; i < 100; i++) {
+    for (var i = 0; i < 100; i++) {
       repository.save(new Tweet(poster, "spamming @dr_frank " + i, users.subList(0, 1), null));
     }
-    assertTrue(
-        repository.findAllWithHibernateQuery(tweet.mentions.contains(users.get(1))).isEmpty());
+    assertThat(repository.findAllWithHibernateQuery(tweet.mentions.contains(users.get(1))))
+        .isEmpty();
 
-    assertEquals(
-        100, repository.findAllWithHibernateQuery(tweet.mentions.contains(users.get(0))).size());
+    assertThat(repository.findAllWithHibernateQuery(tweet.mentions.contains(users.getFirst())))
+        .hasSize(100);
 
-    assertTrue(
-        repository.findAllWithHibernateQuery(tweet.mentions.any().username.eq("duplo")).isEmpty());
+    assertThat(repository.findAllWithHibernateQuery(tweet.mentions.any().username.eq("duplo")))
+        .isEmpty();
 
-    assertEquals(
-        100,
-        repository.findAllWithHibernateQuery(tweet.mentions.any().username.eq("dr_frank")).size());
+    assertThat(repository.findAllWithHibernateQuery(tweet.mentions.any().username.eq("dr_frank")))
+        .hasSize(100);
   }
 }
